@@ -15,13 +15,7 @@ proc run_error_test { name opts } {
 }
 
 # symver is only supported by ELF targets.
-if { ([istarget "*-*-elf*"]		
-      || [istarget "m6811-*"]
-      || [istarget "m6812-*"]
-      || [istarget "*-*-linux*"]
-      || [istarget "*-*-gnu*"])
-     && ![istarget *-*-linux*aout*]
-     && ![istarget *-*-linux*oldld*] } then {
+if { [is_elf_format] } then {
 
     if {[istarget "ia64-*"]} then {
       return
